--- a/Finding_Lane_Lines_on_the_Road.ipynb
+++ b/Finding_Lane_Lines_on_the_Road.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,14 +488,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "t:   5%|▌         | 12/221 [00:00<00:01, 107.46it/s, now=None]"
+      "\r",
+      "t:   0%|          | 0/221 [00:00<?, ?it/s, now=None]"
      ]
     },
     {
@@ -520,8 +521,8 @@
      "text": [
       "Moviepy - Done !\n",
       "Moviepy - video ready test_videos_output/solidWhiteRight.mp4\n",
-      "CPU times: user 1.37 s, sys: 175 ms, total: 1.55 s\n",
-      "Wall time: 3.1 s\n"
+      "CPU times: user 1.4 s, sys: 190 ms, total: 1.59 s\n",
+      "Wall time: 3.26 s\n"
      ]
     }
    ],
@@ -546,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +562,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,14 +595,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "t:   2%|▏         | 13/681 [00:00<00:05, 124.28it/s, now=None]"
+      "t:   2%|▏         | 12/681 [00:00<00:05, 113.90it/s, now=None]"
      ]
     },
     {
@@ -626,8 +627,8 @@
      "text": [
       "Moviepy - Done !\n",
       "Moviepy - video ready test_videos_output/solidYellowLeft.mp4\n",
-      "CPU times: user 4.29 s, sys: 529 ms, total: 4.82 s\n",
-      "Wall time: 8.15 s\n"
+      "CPU times: user 4.4 s, sys: 613 ms, total: 5.01 s\n",
+      "Wall time: 8.64 s\n"
      ]
     }
    ],
@@ -645,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +661,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,14 +696,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "t:   3%|▎         | 8/251 [00:00<00:03, 72.81it/s, now=None]"
+      "t:   3%|▎         | 7/251 [00:00<00:03, 61.98it/s, now=None]"
      ]
     },
     {
@@ -727,8 +728,8 @@
      "text": [
       "Moviepy - Done !\n",
       "Moviepy - video ready test_videos_output/challenge.mp4\n",
-      "CPU times: user 3.48 s, sys: 519 ms, total: 4 s\n",
-      "Wall time: 7.01 s\n"
+      "CPU times: user 3.57 s, sys: 609 ms, total: 4.18 s\n",
+      "Wall time: 7.41 s\n"
      ]
     }
    ],
@@ -746,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +762,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
